--- a/capstone/package.json
+++ b/capstone/package.json
@@ -10,15 +10,36 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
-    "expo": "~50.0.13",
-    "expo-av": "~13.10.5",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.5",
+    "expo": "^50.0.13",
+    "expo-image": "~1.10.6",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
-    "react-native-video": "^5.2.1",
+    "react-native-animatable": "^1.3.3",
+    "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-progress": "^5.0.0",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-star-rating": "^1.0.8",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "socket.io-client": "^4.7.5"
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
